--- a/CSS/barber_style.css
+++ b/CSS/barber_style.css
@@ -99,21 +99,22 @@ button.navbar-toggler {
 .third1{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-direction: row;
+    padding: 10px 20px;
     
 }
 .third2{
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 .third3{
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 .third1 div{
 
@@ -187,14 +188,76 @@ button.navbar-toggler {
     text-align: center;
     color: white;
 }
-.col-md-3{
+.serv{
     background-color: #261818;
     border: 2px solid pink;
-    
 }
 .col-md-3 img{
     width: 100%;
 }
-footer{
-    background-color: black;
-}  
+.contactInfo{
+    background-color: #261818;
+    color: #FFFFFF;
+}
+.links ul{
+    padding-left: 15px;
+}
+.links ul li{
+    list-style: none;
+    font-size: 0.8em;
+}
+.links ul li a{
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.get-touch p a{
+    color: #FECAFF;
+    text-decoration: none;
+}
+.contactInfo h5{
+    color: #FA00FF;
+}
+.contactInfo p{
+    font-size: 0.8em;
+}
+.fab, .fas{
+    font-size: 20px;
+    color: white;
+}
+.fa-whatsapp{
+    color: greenyellow;
+}
+.fa-envelope{
+    color: skyblue;
+    background-color: #FA00FF;
+} 
+footer, footer a{
+    font-size: 0.8em;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+.socials a{
+    padding: 0 10px;
+    font-size: 1em;
+}
+.socials a:hover{
+    color: #FA00FF;
+    font-size: 1.2em;
+}
+@media screen and (max-width:768px) {
+    .contactInfo div{
+        text-align: center;
+    }
+    .links ul{
+        padding-left: 5px;
+    }
+}
+
+
+
+
+
+
+
+
+
