--- a/CSS/login.css
+++ b/CSS/login.css
@@ -6,6 +6,31 @@
     font-family: 'Poppins', sans-serif;
 }
 
+/*Navbar*/
+nav .logo a{
+    color: white !important;
+    font-family: 'Recursive', sans-serif;
+    font-style: 800;
+    font-size: 2rem;
+}
+nav .logo a span{
+    color: #FA00FF;
+    font-family: 'Recursive', sans-serif;
+}
+#list a{
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.05rem;
+}
+#navbarText .bttn button{
+    color: #FA00FF !important;
+    border: 1px solid #FA00FF;
+    width: 8rem;
+}
+.btn-outline-success:hover{
+    background-color: rgba(250, 0, 255, 0.5);
+}
+/*End Navbar*/
+
 .page-wrapper{
     background-image: url("../images/helb.png");
     background-size: contain;
