--- a/CSS/login.css
+++ b/CSS/login.css
@@ -116,3 +116,9 @@ input[type="text"], input[type="password"]{
         
     }
 }
+
+@media only screen and (max-width: 1024px){
+    .form{
+        width: 50%;  
+    }
+}
