--- a/CSS/login.css
+++ b/CSS/login.css
@@ -122,3 +122,10 @@ input[type="text"], input[type="password"]{
         width: 50%;  
     }
 }
+
+@media (max-width: 768px){
+    .form{
+        width: 80%;
+        
+    }
+}
