--- a/CSS/login.css
+++ b/CSS/login.css
@@ -129,3 +129,10 @@ input[type="text"], input[type="password"]{
         
     }
 }
+
+@media only screen and (max-width: 606px){
+    .form{
+        width: 100%;
+        
+    }
+}
