--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,14 +21,14 @@ span{
     font-size: 1.05rem;
 }
 
-#navbarText form button a{
+#navbarText form button{
     color: #fa00ff !important;
     border: 1px solid #fa00ff;
     width: 7rem;
     font-weight: 500;
 }
 
-#navbarText button a:hover{
+#navbarText button:hover{
     color: #212529 !important;
     background-color: #fa00ff;
 }
