--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,15 @@ span{
     font-family: 'Poppins', sans-serif;
     font-size: 1.05rem;
 }
+.butn{
+    color:#fa00ff;
+    border: 1px solid #fa00ff;
+    width:7rem;
+}
+    
+.butn a{
+    text-decoration:none;
+    }
 
 #navbarText form button{
     color: #fa00ff !important;
